# DracoBufferEncoder

./: .gitignore  .gitmodules  CMakeLists.txt  buffer-fmt.yaml  build_decoder.sh  worker.js
include/: ExporterConfig.h.in  awdbuf.h  kaitaistruct.h
src/: awdbuf.cpp  kaitaistream.cpp  main.cxx
test/: test.sh  textfile.txt
test/output/: out2.drc
